# PrefixPGM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.cpp  pgm_index_prefix.hpp  piecewise_linear_model.hpp  wide_integer_adapter.hpp
